[WangRan] feat: finish register page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>登录界面</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="./styles/index.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/index-register.css"/>
 
 </head>
 <body>
@@ -31,7 +31,7 @@
                     </label>
                 </div>
             </div>
-            <input type="button" value="提交" onclick="onSubmitClick()"/>
+            <input type="button" value="登录" onclick="onSubmitClick()"/>
         </form>
         <a href="register.html">
             <h2>还没有账户？前往注册</h2>
