--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -2,9 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>注册界面</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/index-register.css"/>
+
 </head>
 <body>
+<div class="content-box">
+    <div class="register-box">
+        <h1>用户注册</h1>
+        <form>
+            <div class="username-box">
+                <div>
+                    ⚪
+                </div>
+                <div class="input-box">
+                    <label>
+                        <input type="text" class="username-input"/>
+                    </label>
+                </div>
+            </div>
+            <div class="password-box">
+                <div>
+                    ⚪
+                </div>
+                <div class="input-box">
+                    <label>
+                        <input type="text" class="password-input"/>
+                    </label>
+                </div>
+            </div>
+            <input type="button" value="注册" onclick="onRegisterClick()"/>
+        </form>
+        <a href="index.html">
+            <h2>已有用户？前往登录</h2>
+        </a>
+    </div>
+
+</div>
 
 </body>
+<script src="./scripts/ajax.js"></script>
+<script src="./scripts/register.js"></script>
 </html>
