--- a/src/main/resources/static/user-list.html
+++ b/src/main/resources/static/user-list.html
@@ -6,6 +6,21 @@
 </head>
 <body>
 
+<div class="user-list">
+    <table>
+        <thead>
+            <td>id</td>
+            <td>name</td>
+            <td>password</td>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+
+</div>
+
+
 </body>
 <script src="./scripts/ajax.js"></script>
 <script src="./scripts/user-list.js"></script>
