[WangRan] feat: make pages prettier

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
         <form>
             <div class="username-box">
                 <div>
-                    ⚪
+                    用户名
                 </div>
                 <div class="input-box">
                     <label>
@@ -23,15 +23,17 @@
             </div>
             <div class="password-box">
                 <div>
-                    ⚪
+                    密码
                 </div>
                 <div class="input-box">
                     <label>
-                        <input type="text" class="password-input"/>
+                        <input type="password" class="password-input"/>
                     </label>
                 </div>
             </div>
-            <input type="button" value="登录" onclick="onSubmitClick()"/>
+            <div class="submit-btn" onclick="onSubmitClick()">
+                登录
+            </div>
         </form>
         <a href="register.html">
             <h2>还没有账户？前往注册</h2>
