--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -12,9 +12,7 @@
         <h1>用户注册</h1>
         <form>
             <div class="username-box">
-                <div>
-                    ⚪
-                </div>
+                <div> 用户名</div>
                 <div class="input-box">
                     <label>
                         <input type="text" class="username-input"/>
@@ -22,16 +20,16 @@
                 </div>
             </div>
             <div class="password-box">
-                <div>
-                    ⚪
-                </div>
+                <div> 密码</div>
                 <div class="input-box">
                     <label>
-                        <input type="text" class="password-input"/>
+                        <input type="password" class="password-input"/>
                     </label>
                 </div>
             </div>
-            <input type="button" value="注册" onclick="onRegisterClick()"/>
+            <div class="submit-btn" onclick="onRegisterClick()">
+                注册
+            </div>
         </form>
         <a href="index.html">
             <h2>已有用户？前往登录</h2>
