--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
-<html lang="UTF-8">
+<html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <title>注册页面</title>
-    <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="static/register.css" rel="stylesheet"/>
-    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <title>注册界面</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/index-register.css"/>
+
 </head>
 <body>
-<form id="form" class="register well">
-    <h3>用户注册</h3>
-    <div class="input-group input-group-md">
-              <span class="input-group-addon" id="sizing-addon1">
-                  <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-              </span>
-        <input id="name"
-               type="text"
-               class="form-control"
-               placeholder="用户名"
-               aria-describedby="sizing-addon1"/>
+<div class="content-box">
+    <div class="register-box">
+        <h1>用户注册</h1>
+        <form>
+            <div class="username-box">
+                <div> 用户名</div>
+                <div class="input-box">
+                    <label>
+                        <input type="text" class="username-input"/>
+                    </label>
+                </div>
+            </div>
+            <div class="password-box">
+                <div> 密码</div>
+                <div class="input-box">
+                    <label>
+                        <input type="password" class="password-input"/>
+                    </label>
+                </div>
+            </div>
+            <div class="submit-btn" onclick="onRegisterClick()">
+                注册
+            </div>
+        </form>
+        <a href="index.html">
+            <h2>已有用户？前往登录</h2>
+        </a>
     </div>
-    <div class="input-group input-group-md">
-              <span class="input-group-addon" id="sizing-addon2">
-                  <i class="glyphicon glyphicon-lock"></i>
-              </span>
-        <input type="password"
-               id="password"
-               class="form-control"
-               placeholder="密码"
-               aria-describedby="sizing-addon2"/>
-    </div>
-    <button type="button" class="btn btn-success btn-block">注册</button>
-    <a class="btn-sm btn-white btn-block" href="index.html">
-        <h6>已有账户？前往登录</h6>
-    </a>
-</form>
+
+</div>
+
 </body>
-<script src="static/register.js"></script>
+<script src="./scripts/ajax.js"></script>
+<script src="./scripts/register.js"></script>
 </html>
